--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Ngenge Senior,Harisu Fanyui",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19"
   }
 }
